third_party/rust/cxx/v1/crate/tests/ui/extern_fn_abi.rs
#[cxx::bridge]
mod ffi {
    extern "C++" {
        extern "Java" fn f();
    }
}

fn main() {}
